Issue #24732, #23834: Fix sock_accept_impl() on Windows

accept() returns INVALID_SOCKET on error, it's not necessary a negative number.